dataset1235/2025-2/805158916/users/674524038/executions/2651470117_2819779400.log
== SUBMISSION (2025-08-25 14:55:38)
-- CODE: 
#Quantidade de jogos
qj = int(input("Quantidade de jogos a serem encomendados: "))
#Valor unitário de cada jogo
vu = float(input("O valor unitário de cada jogo: "))
#Valor do frete
vf = float(input("Valor do frete: "))
#Soma dos valores
total = qj + vu + vf
#Impressão do total
print("Total: ",round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  213.4
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  1542.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  145.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  172.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  65.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  135.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:59:02)
-- CODE: 
#Quantidade de jogos
qj = int(input("Quantidade de jogos a serem encomendados: "))
#Valor unitário de cada jogo
vu = float(input("O valor unitário de cada jogo: "))
#Valor do frete
vf = float(input("Valor do frete: "))
#Soma dos valores
total = (qj * vu) + vf
#Impressão do total
print("Total: ",round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:58:13)
-- CODE: 
#Quantidade de jogos
qj = int(input("Quantidade de jogos a serem encomendados: "))
#Valor unitário de cada jogo
vu = float(input("O valor unitário de cada jogo: "))
#Valor do frete
vf = float(input("Valor do frete: "))
#Soma dos valores
total = (qj * vu) + vf
#Impressão do total
print("Total: ",round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:54:55)
-- CODE: 
#Quantidade de jogos
qj = int(input("Quantidade de jogos a serem encomendados: "))
#Valor unitário de cada jogo
vu = float(input("O valor unitário de cada jogo: "))
#Valor do frete
vf = float(input("Valor do frete: "))
#Soma dos valores
total = qj + vu + vf
#Impressão do total
print("Total: round(total, 2)")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total: round(total, 2)
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total: round(total, 2)
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total: round(total, 2)
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total: round(total, 2)
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total: round(total, 2)
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total: round(total, 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:53:50)
-- CODE: 
#Quantidade de jogos
qj = int(input("Quantidade de jogos a serem encomendados: "))
#Valor unitário de cada jogo
vu = float(input("O valor unitário de cada jogo: "))
#Valor do frete
vf = float(input("Valor do frete: "))
#Soma dos valores
total = qj + vu + vf
#Impressão do total
print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: 213.4
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: 1542.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: 145.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: 172.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: 65.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: 135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:54:26)
-- CODE: 
#Quantidade de jogos
qj = int(input("Quantidade de jogos a serem encomendados: "))
#Valor unitário de cada jogo
vu = float(input("O valor unitário de cada jogo: "))
#Valor do frete
vf = float(input("Valor do frete: "))
#Soma dos valores
total = qj + vu + vf
#Impressão do total
print("Total: "round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
File "XXXX", line 10
    print("Total: "round(total, 2))
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
File "XXXX", line 10
    print("Total: "round(total, 2))
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
File "XXXX", line 10
    print("Total: "round(total, 2))
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
File "XXXX", line 10
    print("Total: "round(total, 2))
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
File "XXXX", line 10
    print("Total: "round(total, 2))
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
File "XXXX", line 10
    print("Total: "round(total, 2))
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:58:23)
-- CODE: 
#Quantidade de jogos
qj = int(input("Quantidade de jogos a serem encomendados: "))
#Valor unitário de cada jogo
vu = float(input("O valor unitário de cada jogo: "))
#Valor do frete
vf = float(input("Valor do frete: "))
#Soma dos valores
total = (qj * vu) + vf
#Impressão do total
print("Total: ",round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:53:26)
-- CODE: 
#Quantidade de jogos
qj = int(input("Quantidade de jogos a serem encomendados: "))
#Valor unitário de cada jogo
vu = float(input("O valor unitário de cada jogo: "))
#Valor do frete
vf = float(input("Valor do frete: "))
#Soma dos valores
total = qj + vu + vf
#Impressão do total
print(round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: 213.4
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: 1542.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: 145.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: 172.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: 65.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: 135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:57:56)
-- CODE: 
#Quantidade de jogos
qj = int(input("Quantidade de jogos a serem encomendados: "))
#Valor unitário de cada jogo
vu = float(input("O valor unitário de cada jogo: "))
#Valor do frete
vf = float(input("Valor do frete: "))
#Soma dos valores
total = (qj * vu) + vf
#Impressão do total
print("Total: ",round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:59:03)
-- CODE: 
#Quantidade de jogos
qj = int(input("Quantidade de jogos a serem encomendados: "))
#Valor unitário de cada jogo
vu = float(input("O valor unitário de cada jogo: "))
#Valor do frete
vf = float(input("Valor do frete: "))
#Soma dos valores
total = (qj * vu) + vf
#Impressão do total
print("Total: ",round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:56:59)
-- CODE: 
#Quantidade de jogos
qj = int(input("Quantidade de jogos a serem encomendados: "))
#Valor unitário de cada jogo
vu = float(input("O valor unitário de cada jogo: "))
#Valor do frete
vf = float(input("Valor do frete: "))
#Soma dos valores
total = qj + vu + vf
#Impressão do total
print("Total: ",round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  213.4
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  1542.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  145.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  172.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  65.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:55:26)
-- CODE: 
#Quantidade de jogos
qj = int(input("Quantidade de jogos a serem encomendados: "))
#Valor unitário de cada jogo
vu = float(input("O valor unitário de cada jogo: "))
#Valor do frete
vf = float(input("Valor do frete: "))
#Soma dos valores
total = qj + vu + vf
#Impressão do total
print("Total: ",round(total, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  213.4
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  1542.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  145.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  172.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  65.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
Quantidade de jogos a serem encomendados: O valor unitário de cada jogo: Valor do frete: Total:  135.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
